src/main/webapp/css/newStyle.css
/* ... */
@media screen and (min-width:768px) {
  #searchBarBlock {
    position: relative !important;
    z-index: 999999;
    margin-top: -78px !important;
    display: block !important;
    width: 97% !important;
    margin: 0 auto;
    font-family: 'Roboto', sans-serif !important;
  }
}
#buttonSearch button {
  position: relative;
  z-index: 1000000 !important;
  right: 29px !important;
  top: 3px;
  padding: 12px 0px 12px 0 !important;
  outline: none;
  border: none;
  background-color: transparent;
}
/* Estimated results */
p#estimated-results {
  font-family: arial, sans-serif;
  font-size: 13px;
  color: #70757a;
  line-height: 43px;
  margin-top: /*-4px*/ 23px;
  position: relative;
  top: 0;
  -webkit-transition: all 220ms ease-in-out;
  padding-bottom: 0px;
  /*margin-left: /*25px*/ /*13px;*/
  position: relative;
  top: -20px;
  padding-left: 6px;
}
input {
  -webkit-user-select: text;
}
#ionSlider {
  float: left;
  width: 100%;
  height: 80px !important;
  margin-top: -3px;
  margin-bottom: 10px;
  font-size: 1em !important;
  text-align: center !important;
  position: relative;
  z-index: 999997
}
#sliderCircleEnd {
  position: relative;
  padding-right: 9px;
  padding-top: 0px;
  margin-left: 0px;
  background: transparent url(../img/calendario.svg) no-repeat right 6px;
  background-size: 52px;
  text-decoration: none !important;
  font-size: 1.15em !important;
  height: 73px;
  height: 79px;
  padding-left: 36px;
  color: #1a73ba;
  z-index: -1;
}
#sliderCircleStart {
  position: relative;
  padding-right: 36px;
  margin-left: 0px;
  background: transparent url(../img/calendario.svg) no-repeat 0px 6px;
  background-size: 52px;
  text-decoration: none !important;
  font-size: 1.15em !important;
  height: 79px;
  padding-left: 7px;
  color: #1a73ba;
  z-index: -1;
}
/* NEW style: calendar month and day */
#calendarDayStart {
position: relative;
    top: 29px;
    left: -7.5px;
    font-size: 1em;
    letter-spacing: -1px;
    color: #1a73ba;
    font-family:  'Roboto', 'Helvetica', 'Arial', sans-serif !important;
    text-align: right;
}
#calendarMonthStart {
 position: relative;
    top: 9.2px;
    left: 12.1px;
    font-size: 0.8em;
    letter-spacing: 0px;
    color: #1a73ba;
    font-family:  'Roboto', 'Helvetica', 'Arial', sans-serif !important;
    text-align: right;
    display: inline-block;
    width: 19px;
}
#calendarDayEnd {  
  position: relative;
    top: 29px;
    left: -8px;
    font-size: 1em;
    letter-spacing: -1px;
    color: #1a73ba;
    font-family:  'Roboto', 'Helvetica', 'Arial', sans-serif !important;
}
#calendarMonthEnd {
  position: relative !important;
    top: 9.7px !important;
    left: 11.6px !important;
    font-size: 0.8em !important;
    letter-spacing: 0px !important;
    color: #1a73ba !important;
    font-family:  'Roboto', 'Helvetica', 'Arial', sans-serif !important;
    text-align: right;
    display: inline-block;
    width: 19px;

}
#calendarYearStart {
  position: relative !important;
  bottom: 30px !important;
  left: 1.1px !important;
  padding-top: -2px !important;
  font-size: 1.2em !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
}
#calendarYearEnd {
  position: relative !important;
  bottom: 30px !important;
  left: 2px !important;
  padding-top: 1px !important;
  font-size: 1.2em !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
}
ion-item {
  --pin-display: none !important;
}
body#advanced #searchForm {
  margin-top: 0 !important;
  
    margin: 0 21px;
}

body#advanced-images #searchForm {
  margin-top: 0px;  
  padding: 0 21px;
}

#searchForm {
  margin-top: 25px;
}
/* NEW STYLE: Change placeholder */ ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #777 !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
::-moz-placeholder { /* Firefox 19+ */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
:-ms-input-placeholder { /* IE 10+ */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
:-moz-placeholder { /* Firefox 18- */
  color: #b1afaf !important;
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif !important;
  font-weight: 100 !important;
}
#form_container {
  margin-top: 10px;
}
.faded {
  opacity: 0.6;
}
#resultados-lista {
  font-family: roboto !important;
  margin-left:  0px !important;
  margin-right: 0px  !important;
  margin-top: 1px;
}
#resultados-lista ul {
  /*list-style-type: none;
  padding-left: 0px;
  /* NEW STYLE: decrease distance search results area from search bar */
  /*margin-top: -20px !important;
  font-size: 1.2em !important;
  font-family: Roboto !important;
  border: none*/
  list-style-type: none;
    padding-left: 0px;
    margin-top: -20px !important;
    font-size: 1.2em !important;
    font-family: Roboto !important;
    border: none;
    width: 100%;
    margin: 0 auto;
   /* max-width: 993px;*/
}
#resultados-lista ul li {
  list-style-type: none;
  padding-left: 0px;
  margin-top: -20px !important;
  font-family: inherit;
  background-color: #fcfafa !important;
}
#resultados-lista ul li .resumo {
  line-height: 20px !important;
  font-size: 16px !important;
  white-space: normal !important;
}
#resultados-lista ul li a {
  color: #1c75c0 !important;
  font-size: 1.18em !important;
  font-family: 'Roboto', sans-serif;
  line-height: normal;
}
#resultados-lista ul li a:visited h2 {
  color: #9c27b0 !important;
}
.url {
  word-wrap: break-word;
  color: #009688;
  margin-bottom: -4px;
  font-size: 14px;
  font-family: 'Roboto', sans-serif;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
#resultados-lista ul li h2 {
  font-size: 20px;
  margin-bottom: 0px;
  padding-top: 0px;
  margin-top: 0px;
}
#resultados-lista ul li h2 a {
  color: #1c75c0;
}
/* ... */

